--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
+    "@sanar/react-native-highlight-text": "^1.0.2",
     "expo": "~47.0.12",
+    "expo-print": "^12.0.0",
+    "expo-sharing": "^11.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
