--- a/package.json
+++ b/package.json
@@ -10,20 +10,17 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-navigation/native": "^6.1.4",
-    "@react-navigation/native-stack": "^6.9.10",
+    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/native-stack": "^6.9.9",
     "@sanar/react-native-highlight-text": "^1.0.2",
     "expo": "~47.0.12",
     "expo-print": "^12.0.0",
     "expo-sharing": "^11.0.1",
     "expo-status-bar": "~1.4.2",
-    "javascript-color-gradient": "^2.4.4",
     "react": "18.1.0",
-    "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.20.0",
-    "react-native-web": "~0.18.9"
+    "react-native-screens": "^3.19.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
