--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@react-navigation/native-stack": "^6.9.9",
     "@sanar/react-native-highlight-text": "^1.0.2",
     "expo": "~47.0.12",
+    "expo-image-picker": "~14.0.2",
     "expo-print": "^12.0.0",
     "expo-sharing": "^11.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-image-crop-picker": "^0.39.0",
+    "react-native-image-picker": "^5.1.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
