--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.9.9",
     "@sanar/react-native-highlight-text": "^1.0.2",
     "expo": "~47.0.12",
+    "expo-file-system": "^15.2.2",
     "expo-font": "~11.0.1",
     "expo-image-picker": "~14.0.2",
     "expo-print": "^12.0.0",
