--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/native": "^6.1.3",
-    "@react-navigation/native-stack": "^6.9.9",
+    "@react-navigation/native-stack": "^6.9.11",
     "@sanar/react-native-highlight-text": "^1.0.2",
     "expo": "~47.0.12",
     "expo-file-system": "^15.2.2",
@@ -21,13 +21,15 @@
     "expo-sharing": "^11.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.70.5",
     "react-native-image-crop-picker": "^0.39.0",
     "react-native-image-picker": "^5.1.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
